 * Fix: Allow both horizontal and vertical manual resizing of TextFields (Anisha Singh)
 * Fix: Use the correct padding for autocomplete block picker (Umar Farouk Yunusa)
 * Fix: Ensure that short content pages (such as editing snippets) do not show an inconsistent background (Sage Abdullah)
 * Fix: Fix horizontal positioning of rich text inline toolbar (Thibaud Colas)
 * Docs: Add custom permissions section to permissions documentation page (Dan Hayden)
 * Docs: Add documentation for how to get started with contributing translations for the Wagtail admin (Ogunbanjo Oluwadamilare)
 * Docs: Officially recommend `fnm` over `nvm` in development documentation (LB (Ben) Johnston)
 * Docs: Mention the importance of passing `request` and `current_site` to `get_url` on the performance documentation page (Jake Howard)
 * Docs: Add documentation for `register_user_listing_buttons` hook (LB (Ben Johnston))
 * Docs: Add development (contributing to Wagtail) documentation notes for development on Windows (Akua Dokua Asiedu)
 * Docs: Mention Wagtail’s usage of Django’s default user model by default (Temidayo Azeez)
 * Docs: Add links to treebeard documentation for relevant methods (Temidayo Azeez)
 * Docs: Add clarification on where to register entity plugins (Mark McOsker)
 * Docs: Fix logo in README not being visible in high-contrast mode (Benita Anawonah)
 * Docs: Improve 'first wagtail site' tutorial (Akua Dokua Asiedu)
 * Docs: Grammatical adjustments of `page models` usage guide (Damilola Oladele)
 * Docs: Add class inheritance information to StreamField block sreference (Temidayo Azeez)
 * Docs: Document the hook `register_image_operations` and add an example of a custom Image filter (Coen van der Kamp)
 * Docs: Fix incorrect example code for StreamField migration of `RichTextField` (Matt Westcott)
 * Maintenance: Remove unsquashed `testapp` migrations (Matt Westcott)
 * Maintenance: Upgrade to Node 18 for frontend build tooling (LB (Ben) Johnston)