@@ -62,6 +62,7 @@ Wagtail now provides a set of utilities for creating data migrations on StreamFi
  * Use the correct padding for autocomplete block picker (Umar Farouk Yunusa)
  * Ensure that short content pages (such as editing snippets) do not show an inconsistent background (Sage Abdullah)
  * Fix horizontal positioning of rich text inline toolbar (Thibaud Colas)
+ * Ensure that `DecimalBlock` correctly handles `None`, when `required=False`, values (Natarajan Balaji)
 
 ### Documentation
 
