@@ -48,6 +48,7 @@ Changelog
  * Fix: Use the correct padding for autocomplete block picker (Umar Farouk Yunusa)
  * Fix: Ensure that short content pages (such as editing snippets) do not show an inconsistent background (Sage Abdullah)
  * Fix: Fix horizontal positioning of rich text inline toolbar (Thibaud Colas)
+ * Fix: Ensure that `DecimalBlock` correctly handles `None`, when `required=False`, values (Natarajan Balaji)
  * Docs: Add custom permissions section to permissions documentation page (Dan Hayden)
  * Docs: Add documentation for how to get started with contributing translations for the Wagtail admin (Ogunbanjo Oluwadamilare)
  * Docs: Officially recommend `fnm` over `nvm` in development documentation (LB (Ben) Johnston)
